# grow

./: .gitignore  Cargo.toml  old_fan.rs  old_main.rs
.cargo/: config.toml
74HC595/src/: lib.rs
examples/rpi3/: Cargo.toml  deploy.sh  release.sh
examples/rpi3/.cargo/: config.toml
examples/rpi3/src/: cmd.rs  hardware.rs  init.rs  main.rs
examples/rpi3/src/hardware/: bmp180_old.rs  conf.rs  dummy.rs  lpu.rs  lpu_remote.rs  pcf8591.rs  pushbuttons.rs  pwmfan.rs  regshift_leds.rs  ssd1306.rs
grow/: Cargo.toml  grow_conf.js
grow/src/: error.rs  lib.rs  ops.rs  zone.rs
grow/src/ops/: conf.rs  display.rs  input.rs  io.rs  manager.rs  remote.rs  running.rs  xymon.rs
grow/src/zone/: air.rs  arm.rs  auxiliary.rs  irrigation.rs  light.rs  water.rs
grow/src/zone/irrigation/: arm.rs  pump.rs  tank.rs
grow/src/zone/water/: arm.rs  pump.rs  tank.rs
mb2/: Cargo.toml
resources/: My descriptions.vfx  My settings.vfx  My settings_ALLCOL.vfx  grow_conf.js  grow_xymon.js
rpi3/: Cargo.toml  deploy.sh
rpi3/.cargo/: config.toml
rpi3/src/: cmd.rs  error.rs  hardware.rs  init.rs  main.rs  main_old.rs  main_what.rs  old_fan.rs  old_main.rs
rpi3/src/hardware/: conf.rs  lpu.rs  lpu_remote.rs  pcf8591.rs  pushbuttons.rs  pwmfan.rs  regshift_leds.rs  ssd1306.rs
