[package]
name = "grow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#postcard = "1.0.0"
#serde = { version = "1.0.*", default-features = false, features = ["derive"]  }
time = { version = "0.3.*", default-features = false, features = ["macros", "parsing", "alloc", "serde"]  }

anyhow = { version = "1.0", default-features = false }


