[package]
name = "grow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
#postcard = "1.0.0"
#serde = { version = "1.0.*", default-features = false, features = ["derive"]  }
time = { version = "0.3.*", default-features = false, features = ["macros", "parsing", "alloc", "serde", "local-offset", "formatting"]  }

anyhow = { version = "1.0", default-features = false }

tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync", "time"]}

text_io = "0.1.12"
parking_lot = "0.12.1"
cond_utils = "0.1.0"
