[package]
name = "grow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
#postcard = "1.0.0"
time = { version = "0.3.*", default-features = false, features = ["macros", "parsing", "alloc", "serde", "local-offset", "formatting"]  }
anyhow = { version = "1.0", default-features = false }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync", "time"]}
tokio-util = "0.7.8"
text_io = "0.1.12"
parking_lot = "0.12.1"
# cond_utils = "0.1.0"


# serde = { version = "1.0.*", default-features = false, features = ["derive"]  }
serde = { version = "1.0.*",  features = ["derive"]  }
serde_json = "1.0"
# ron = "0.8"
# toml = "0.7.5"
